// QAuth Database Schema
// Three-table identity model: users (anchor), user_credentials (auth methods), user_attributes (claims)
// Designed for wallet-agnostic federation — email/password in Phase 1, SIOPv2/OID4VP wallets in Phase 4
// Generated from Drizzle ORM schema for visualization on dbdiagram.io

// ============================================================================
// ENUMS
// ============================================================================

Enum "token_endpoint_auth_method" {
  "client_secret_post" [note: "Client credentials in POST body (default)"]
  "client_secret_basic" [note: "Client credentials in HTTP Basic Auth header"]
  "private_key_jwt" [note: "JWT signed with private key"]
  "none" [note: "Public client (no authentication)"]
}

Enum "ssl_required" {
  "none" [note: "SSL never required"]
  "external" [note: "SSL required for external requests only"]
  "all" [note: "SSL required for all requests"]
}

Enum "code_challenge_method" {
  "S256" [note: "SHA256 (only supported method - plain text is insecure and not supported)"]
}

Enum "grant_type" {
  "authorization_code" [note: "Authorization Code Flow (with PKCE)"]
  "refresh_token" [note: "Refresh Token Flow"]
  "client_credentials" [note: "Client Credentials Flow (for service-to-service)"]
}

Enum "response_type" {
  "code" [note: "Authorization Code (only supported in OAuth 2.1)"]
}

Enum "audit_event_type" {
  "auth" [note: "Authentication events (login, logout, register)"]
  "token" [note: "Token events (issued, refreshed, revoked)"]
  "client" [note: "Client events (created, updated, deleted)"]
  "security" [note: "Security events (failed login, suspicious activity)"]
  "user" [note: "User management events"]
  "realm" [note: "Realm management events"]
}

// ============================================================================
// CORE TABLES
// ============================================================================

Table "realms" {
  "id" uuid [pk, default: `uuidv7()`]
  "name" varchar(255) [not null, unique]
  "enabled" boolean [not null, default: true]
  "access_token_lifespan" bigint [default: 900, note: "15 minutes in seconds"]
  "refresh_token_lifespan" bigint [default: 604800, note: "7 days in seconds"]
  "ssl_required" "ssl_required" [default: 'external']
  "verify_email" boolean [not null, default: true]
  "registration_allowed" boolean [not null, default: false]
  "login_with_email_allowed" boolean [not null, default: true]
  "duplicate_emails_allowed" boolean [not null, default: false]
  "password_policy" jsonb [note: "Password policy configuration: { minLength, requireUppercase, requireDigits, etc. }"]
  "sso_idle_timeout" bigint [note: "in seconds"]
  "sso_max_lifespan" bigint [note: "in seconds"]
  "revoke_refresh_token" boolean [not null, default: false]
  "refresh_token_max_reuse" integer [default: 0, note: "0 = unlimited"]
  "default_locale" varchar(10)
  "supported_locales" jsonb [default: `'[]'::jsonb`]
  "metadata" jsonb [note: "Additional realm configuration"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    enabled [name: "idx_realms_enabled", note: "Partial index: WHERE enabled = true"]
  }
}

// Identity anchor only. No email, no password_hash, no credential-specific columns.
// One row per user across all authentication methods (password, wallet, OIDC federation).
// OIDC sub claim is always this table's id (UUID) — never email, never external_sub.
Table "users" {
  "id" uuid [pk, default: `uuidv7()`]
  "realm_id" uuid [not null, ref: > realms.id]
  "enabled" boolean [not null, default: true]
  "first_name" varchar(255) [note: "Sourced into the OIDC name claim"]
  "last_name" varchar(255)
  "metadata" jsonb [note: "Flexible storage for additional user data"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "last_login_at" bigint

  Indexes {
    realm_id [name: "idx_users_realm_id"]
    enabled [name: "idx_users_enabled", note: "Partial index: WHERE enabled = true"]
  }
}

// One row per authentication method per user.
// provider_type discriminates the method. external_sub is the method-specific subject identifier.
// credential_data is a JSONB blob carrying method-specific fields (password hash, wallet metadata, etc.)
// Unique constraint on (realm_id, provider_type, external_sub) enforces per-method uniqueness.
Table "user_credentials" {
  "id" uuid [pk, default: `uuidv7()`]
  "user_id" uuid [not null, ref: > users.id]
  "realm_id" uuid [not null, ref: > realms.id]
  "provider_type" text [not null, note: "'password' | 'wallet' | 'oidc_*' | 'did' — plain text (not enum) so the open-ended oidc_* family needs no schema migration"]
  "external_sub" text [not null, note: "'password': normalized email | 'wallet': DID or issuer subject | 'oidc_*': upstream sub claim"]
  "credential_data" jsonb [not null, default: `'{}'::jsonb`, note: "'password': { password_hash, email_verified } | 'wallet': wallet/VC metadata | 'oidc_*': upstream claims. CHECK jsonb_typeof = 'object'"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    (realm_id, provider_type, external_sub) [unique, name: "idx_user_credentials_realm_provider_sub_unique"]
    user_id [name: "idx_user_credentials_user_id"]
    realm_id [name: "idx_user_credentials_realm_id"]
  }
}

// Claims and attributes as data, not identity anchors.
// source tracks where the attribute came from and determines trust level.
// Trust order for claim resolution: wallet > oidc_* > self_reported
// email claim is present in OIDC tokens only if a verified row exists here.
// If no verified email exists, the email claim is omitted entirely (not null).
Table "user_attributes" {
  "id" uuid [pk, default: `uuidv7()`]
  "user_id" uuid [not null, ref: > users.id]
  "source" text [not null, note: "'self_reported' | 'wallet' | 'oidc_google' — plain text (not enum). Trust order wallet > oidc_* > self_reported is enforced in app code (#229), not the DB"]
  "attr_key" text [not null, note: "Attribute name, e.g. 'email', 'name', 'birthdate', 'phone_number'"]
  "attr_value" text [not null]
  "verified" boolean [not null, default: false]
  "expires_at" bigint [note: "For VC-derived attributes — null for self-reported attributes"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    (user_id, source, attr_key) [unique, name: "idx_user_attributes_user_source_key_unique"]
    user_id [name: "idx_user_attributes_user_id"]
  }
}

// References user_credentials (not users) because email verification is a property
// of the password authentication method, not of the abstract user identity.
Table "email_verification_tokens" {
  "id" uuid [pk, default: `uuidv7()`]
  "token_hash" varchar(64) [not null, unique, note: "SHA-256 hash of the verification token"]
  "credential_id" uuid [not null, ref: > user_credentials.id]
  "expires_at" bigint [not null]
  "used" boolean [not null, default: false]
  "used_at" bigint
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    credential_id [name: "idx_email_verification_tokens_credential_id"]
    (token_hash, expires_at) [name: "idx_email_verification_tokens_active", note: "Partial index: WHERE used = false"]
    expires_at [name: "idx_email_verification_tokens_expires_at"]
  }
}

Table "oauth_clients" {
  "id" uuid [pk, default: `uuidv7()`]
  "realm_id" uuid [not null, ref: > realms.id]
  "client_id" varchar(255) [not null]
  "client_secret_hash" text [not null, note: "Argon2id hash"]
  "name" varchar(255) [not null]
  "description" text
  "redirect_uris" jsonb [not null, note: "Array of allowed redirect URIs"]
  "scopes" jsonb [not null, default: `'[]'::jsonb`, note: "Default OAuth scopes"]
  "enabled" boolean [not null, default: true]
  "require_pkce" boolean [not null, default: true, note: "PKCE required by default (OAuth 2.1)"]
  "token_endpoint_auth_method" "token_endpoint_auth_method" [not null, default: 'client_secret_post']
  "grant_types" jsonb [not null, default: `'["authorization_code","refresh_token"]'::jsonb`, note: "Array of grant_type enum values"]
  "response_types" jsonb [not null, default: `'["code"]'::jsonb`, note: "Array of response_type enum values"]
  "developer_id" uuid [ref: > users.id, note: "Nullable for system clients"]
  "metadata" jsonb [note: "Additional client configuration"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "last_used_at" bigint

  Indexes {
    (realm_id, client_id) [unique, name: "idx_oauth_clients_realm_client_id_unique"]
    client_id [name: "idx_oauth_clients_client_id"]
    realm_id [name: "idx_oauth_clients_realm_id"]
    developer_id [name: "idx_oauth_clients_developer_id"]
    enabled [name: "idx_oauth_clients_enabled", note: "Partial index: WHERE enabled = true"]
    (realm_id, client_id, enabled) [name: "idx_oauth_clients_realm_client_id_enabled"]
  }
}

Table "authorization_codes" {
  "id" uuid [pk, default: `uuidv7()`]
  "code" varchar(255) [not null, unique]
  "oauth_client_id" uuid [not null, ref: > oauth_clients.id]
  "user_id" uuid [not null, ref: > users.id]
  "redirect_uri" text [not null]
  "code_challenge" text [not null, note: "PKCE code challenge"]
  "code_challenge_method" "code_challenge_method" [not null, default: 'S256']
  "nonce" text [note: "OIDC nonce parameter — opaque, client-owned, no spec length limit (#316)"]
  "auth_time" bigint [note: "OIDC Core §2 auth_time (epoch ms) — when the end-user actually authenticated"]
  "assurance_level" text [note: "eIDAS LoA of that authentication: 'substantial' | 'high' | NULL (no acr claim) — #237"]
  "scopes" jsonb [not null, default: `'[]'::jsonb`]
  "state" text [note: "CSRF protection state parameter — opaque, client-owned, no spec length limit (#316)"]
  "expires_at" bigint [not null, note: "TTL: 5 minutes"]
  "used" boolean [not null, default: false, note: "Single-use codes"]
  "used_at" bigint
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    (code, expires_at) [name: "idx_authorization_codes_active", note: "Partial index: WHERE used = false"]
    expires_at [name: "idx_authorization_codes_expires_at"]
    user_id [name: "idx_authorization_codes_user_id"]
    oauth_client_id [name: "idx_authorization_codes_oauth_client_id"]
  }
}

Table "refresh_tokens" {
  "id" uuid [pk, default: `uuidv7()`]
  "token_hash" text [not null, unique]
  "user_id" uuid [not null, ref: > users.id]
  "oauth_client_id" uuid [not null, ref: > oauth_clients.id]
  "scopes" jsonb [not null, default: `'[]'::jsonb`]
  "expires_at" bigint [not null, note: "TTL: 7 days"]
  "revoked" boolean [not null, default: false]
  "revoked_at" bigint
  "revoked_reason" varchar(255) [note: "e.g., 'user_logout', 'security_breach'"]
  "previous_token_hash" text [note: "Hash of previous token if rotated"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "last_used_at" bigint

  Indexes {
    (token_hash, expires_at) [name: "idx_refresh_tokens_active", note: "Partial index: WHERE revoked = false"]
    expires_at [name: "idx_refresh_tokens_expires_at"]
    user_id [name: "idx_refresh_tokens_user_id"]
    oauth_client_id [name: "idx_refresh_tokens_oauth_client_id"]
    (user_id, expires_at) [name: "idx_refresh_tokens_user_active", note: "Partial index: WHERE revoked = false"]
  }
}

Table "audit_logs" {
  "id" uuid [pk, default: `uuidv7()`]
  "user_id" uuid [ref: > users.id, note: "Nullable for system events"]
  "oauth_client_id" uuid [ref: > oauth_clients.id, note: "Nullable for system events"]
  "event" varchar(100) [not null, note: "e.g., 'user.login', 'user.register', 'token.issued'"]
  "event_type" "audit_event_type" [not null]
  "success" boolean [not null, default: true]
  "ip_address" varchar(45) [note: "IPv6 compatible"]
  "user_agent" text
  "metadata" jsonb [note: "Additional event data"]
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    user_id [name: "idx_audit_logs_user_id"]
    oauth_client_id [name: "idx_audit_logs_oauth_client_id"]
    event_type [name: "idx_audit_logs_event_type"]
    event [name: "idx_audit_logs_event"]
    created_at [name: "idx_audit_logs_created_at"]
    (user_id, event, created_at) [name: "idx_audit_logs_user_event"]
    (event, created_at) [name: "idx_audit_logs_failed", note: "Partial index: WHERE success = false"]
    ip_address [name: "idx_audit_logs_ip_address"]
  }
}

// ============================================================================
// OPTIONAL: SESSION MANAGEMENT (can use Redis instead)
// ============================================================================

Table "sessions" {
  "id" uuid [pk, default: `uuidv7()`]
  "user_id" uuid [not null, ref: > users.id]
  "oauth_client_id" uuid [ref: > oauth_clients.id]
  "access_token_hash" text [note: "SHA-256 hash of current access token"]
  "refresh_token_hash" text [note: "SHA-256 hash of current refresh token"]
  "ip_address" varchar(45)
  "user_agent" text
  "expires_at" bigint [not null]
  "revoked" boolean [not null, default: false]
  "revoked_at" bigint
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "last_activity_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    user_id [name: "idx_sessions_user_id"]
    (user_id, expires_at) [name: "idx_sessions_active", note: "Partial index: WHERE revoked = false"]
    expires_at [name: "idx_sessions_expires_at"]
    access_token_hash [name: "idx_sessions_access_token_hash"]
    oauth_client_id [name: "idx_sessions_oauth_client_id"]
  }
}

// ============================================================================
// FUTURE: ROLES & PERMISSIONS (Phase 5+)
// ============================================================================

Table "roles" {
  "id" uuid [pk, default: `uuidv7()`]
  "realm_id" uuid [not null, ref: > realms.id]
  "name" varchar(255) [not null]
  "description" text
  "oauth_client_id" uuid [ref: > oauth_clients.id, note: "Client-specific roles (if set, role is scoped to that client)"]
  "enabled" boolean [not null, default: true]
  "metadata" jsonb
  "created_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "updated_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]

  Indexes {
    (realm_id, name, oauth_client_id) [unique, name: "idx_roles_realm_name_unique"]
    name [name: "idx_roles_name"]
    realm_id [name: "idx_roles_realm_id"]
    oauth_client_id [name: "idx_roles_oauth_client_id"]
  }
}

Table "user_roles" {
  "user_id" uuid [not null, ref: > users.id]
  "role_id" uuid [not null, ref: > roles.id]
  "assigned_at" bigint [not null, default: `EXTRACT(EPOCH FROM NOW())::bigint * 1000`]
  "assigned_by" uuid [ref: > users.id]

  Indexes {
    (user_id, role_id) [pk, name: "user_roles_pk"]
    user_id [name: "idx_user_roles_user_id"]
    role_id [name: "idx_user_roles_role_id"]
  }
}

// ============================================================================
// RELATIONSHIPS
// ============================================================================

// IDENTITY MODEL:
// users is a pure identity anchor — no email, no password, no credential fields.
// user_credentials: one row per auth method per user
//   - provider_type='password' → external_sub is email, credential_data has password_hash
//   - provider_type='wallet'   → external_sub is DID or issuer subject (Phase 4)
//   - provider_type='oidc_*'  → external_sub is upstream sub claim (Phase 6+)
// user_attributes: claims as data with source tracking and trust ordering
//   - wallet > oidc_* > self_reported (trust order for claim resolution)
//   - email claim in OIDC tokens comes from here, not from users or user_credentials
//   - absent (not null) when no verified email attribute exists

// REALMS (Multi-tenancy):
// - Each realm is an isolated tenant
// - Realms can have multiple users, clients, roles, etc.
// - All data is scoped to a realm for isolation
// - user_credentials.realm_id enables the unique constraint on (realm_id, provider_type, external_sub)

// Users can have:
// - Belongs to one realm
// - Multiple user_credentials (one per authentication method)
// - Multiple user_attributes (email, name, etc. from various sources)
// - Multiple authorization codes
// - Multiple refresh tokens
// - Multiple sessions
// - Multiple audit logs
// - Multiple OAuth clients (as developer)
// - Multiple roles (via user_roles)

// OAuth clients can have:
// - Belongs to one realm
// - Multiple authorization codes (via oauth_client_id)
// - Multiple refresh tokens (via oauth_client_id)
// - Multiple sessions (via oauth_client_id)
// - Multiple roles (client-specific, via oauth_client_id)
// - Multiple audit logs (via oauth_client_id)
